--- a/.gitmodules
+++ b/.gitmodules
@@ -17,7 +17,7 @@
 	path = deeplearning/clgen
 	url = git@github.com:ChrisCummins/clgen.git
 [submodule "src/labm8"]
-	path = src/labm8
+	path = lib/labm8
 	url = git@github.com:ChrisCummins/labm8.git
 [submodule "src/lmk"]
 	path = src/lmk
