--- a/playground/patterns/BUILD
+++ b/playground/patterns/BUILD
@@ -10,5 +10,5 @@ cc_test(
         "-Iexternal/gtest/include",
         "-Iexternal/benchmark/include",
     ],
-    deps = ["//src/phd:main"],
+    deps = ["//lib/phd:main"],
 )
