--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = http/humanorrobot.uk
 	url = git@github.com:ChrisCummins/humanorrobot.uk.git
 [submodule "src/cldrive"]
-	path = src/cldrive
+	path = gpu/cldrive
 	url = git@github.com:ChrisCummins/cldrive.git
 [submodule "src/clgen"]
 	path = deeplearning/clgen
