--- a/experimental/lm/tests/BUILD
+++ b/experimental/lm/tests/BUILD
@@ -7,13 +7,13 @@ cc_test(
         "tests.hpp",
     ],
     copts = [
-        "-Ilab/lm/include",
-        "-Isrc/phd/include",
+        "-Iexperimental/lm/include",
+        "-Ilib/phd/include",
         "-Iexternal/gtest/include",
         "-Iexternal/benchmark/include",
     ],
     deps = [
-        "//lab/lm:main",
+        "//experimental/lm:main",
         "//lib/phd:main",
     ],
 )
