--- a/lib/stl/BUILD
+++ b/lib/stl/BUILD
@@ -1,5 +1,5 @@
 cc_library(
     name = "main",
     hdrs = glob(["include/ustl/*"]),
-    visibility = ["//lab/stl:__subpackages__"],
+    visibility = ["//lib/stl:__subpackages__"],
 )
