--- a/deeplearning/deepsmith/dsmith/protos/dsmith/BUILD
+++ b/deeplearning/deepsmith/dsmith/protos/dsmith/BUILD
@@ -2,10 +2,11 @@ load("@protobuf//:protobuf.bzl", "py_proto_library")
 
 proto_library(
     name = "dsmith",
-    srcs = ["dsmith.proto"]
+    srcs = ["dsmith.proto"],
 )
 
 py_proto_library(
     name = "dsmith_py",
-    deps = [":dsmith"]
+    protoc = "@com_google_protobuf//:protoc",
+    deps = [":dsmith"],
 )
