--- a/graphics/rt/BUILD
+++ b/graphics/rt/BUILD
@@ -2,11 +2,11 @@ cc_library(
     name = "main",
     srcs = glob(["src/*.cc"]),
     hdrs = glob(["include/rt/*.h"]),
-    copts = ["-Iplayground/rt/include"] + select({
+    copts = ["-Igraphics/rt/include"] + select({
         "//:darwin": ["-Iexternal/tbb_mac/include"],
         "//conditions:default": ["-Iexternal/tbb_lin/include"],
     }),
-    visibility = ["//playground/rt:__subpackages__"],
+    visibility = ["//graphics/rt:__subpackages__"],
     deps = select({
         "//:darwin": ["@tbb_mac//:main"],
         "//conditions:default": ["@tbb_lin//:main"],
