--- a/deeplearning/deepsmith/services/BUILD
+++ b/deeplearning/deepsmith/services/BUILD
@@ -11,6 +11,7 @@ py_library(
 
 py_test(
     name = "tests/testing_test",
+    size = "small",
     srcs = ["tests/testing_test.py"],
     deps = [
         ":testing",
