Add //third_party/opencl package.

--- a/learn/hoocl/BUILD
+++ b/learn/hoocl/BUILD
@@ -9,7 +9,7 @@ cc_library(
         "-Ilearn/hoocl/include",
         "-Ithird_party/opencl/include",
     ],
-    deps = ["//:opencl"],
+    deps = ["//third_party/opencl"],
 )
 
 cc_binary(
