Add high level to/from file handler for protos.

--- a/deeplearning/deepsmith/proto/BUILD
+++ b/deeplearning/deepsmith/proto/BUILD
@@ -12,3 +12,21 @@ py_proto_library(
     visibility = ["//deeplearning/deepsmith:__subpackages__"],
     with_grpc = True,
 )
+
+py_proto_library(
+    name = "test_protos",
+    protos = ["test_protos.proto"],
+    testonly = 1,
+)
+
+py_library(
+    name = "pbutil",
+    srcs = ["pbutil.py"],
+    visibility = ["//deeplearning/deepsmith:__subpackages__"],
+)
+
+py_test(
+    name = "pbutil_test",
+    srcs = ["pbutil_test.py"],
+    deps = [":test_protos"]
+)
