Fix missing BUILD deps.

--- a/deeplearning/deepsmith/proto/BUILD
+++ b/deeplearning/deepsmith/proto/BUILD
@@ -28,5 +28,8 @@ py_library(
 py_test(
     name = "pbutil_test",
     srcs = ["pbutil_test.py"],
-    deps = [":test_protos"],
+    deps = [
+        ":pbutil",
+        ":test_protos",
+    ],
 )
